# unintellisense

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: unintellisense.cpp
